--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/arbitrum-sdk"]
 	path = lib/arbitrum-sdk
 	url = https://github.com/OffchainLabs/arbitrum-sdk
+[submodule "lib/nitro-contracts.git"]
+	path = lib/nitro-contracts.git
+	url = https://github.com/EspressoSystems/nitro-contracts.git
