--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/nitro-contracts.git"]
 	path = lib/nitro-contracts.git
 	url = https://github.com/EspressoSystems/nitro-contracts.git
+[submodule "lib/nitro-contracts"]
+	path = lib/nitro-contracts
+	url = https://github.com/EspressoSystems/nitro-contracts
