--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,18 @@
 src = 'contracts'
 out = 'out'
 libs = ['node_modules', 'lib']
+remappings = [
+"@arbitrum/=node_modules/@arbitrum/",
+"@offchainlabs/=node_modules/@offchainlabs/",
+"@openzeppelin/=node_modules/@openzeppelin/",
+"ds-test/=lib/forge-std/lib/ds-test/src/",
+"eth-gas-reporter/=node_modules/eth-gas-reporter/",
+"forge-std/=lib/forge-std/src/",
+"hardhat/=node_modules/hardhat/",
+"solady/=node_modules/solady/",
+"@openzeppelin/contracts-upgradeable/=/node_modules/@openzeppelin/contracts-upgradeable/",
+"@openzeppelin/contracts/=/node_modules/@openzeppelin/contracts/",
+]
 test = 'test'
 cache_path  = 'cache_forge'
 solc_version = '0.8.16'
