--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,7 @@
 [submodule "lib/arbitrum-sdk"]
 	path = lib/arbitrum-sdk
 	url = https://github.com/OffchainLabs/arbitrum-sdk
-[submodule "lib/nitro-contracts.git"]
+[submodule "lib/nitro-contracts"]
 	path = lib/nitro-contracts
-  url = https://github.com/EspressoSystems/nitro-contracts
-  branch = celestia-integration
+	url = https://github.com/EspressoSystems/nitro-contracts
+	branch = celestia-integration
