Fix build and cherry pick migration (#12)
* Espresso tee migration (#8)

* Add Script to deploy Espresso SequencerInbox contract, and the basis for a migration Action script.

* small compilation fixes

* forge install: nitro-contracts

celestia-integration

* Fix forge dependencies again

* fix foundry.toml mappings

* pull latest dependencies from forge update

* Remove old migration scripts and add replacements

* Add solidity test for migration action upgrade contract

* run forge fmt

* Remove unnecessary code in migration action test (and forge fmt)

* fix typo

* Update scripts and test to use better practices and run yarn format

* Delete old OSP migration action

* add more comments to sequencer inbox migration and run yarn format

* Add new script to deploy migration action

* Move contradcts to directories that better encapsulate their purpose and add script to update the chain config.

* Apply PR feedback to migration contract and test.

* Update migration readme (#10)

* Update example-chain-config.json

* Updated README.MD and the sequencer inbox migration action

* Update README.md to reflect the new migration process, and edit deployment scripts so forge is happy

* Update dependencies

* Add via-ir to foundry.toml to allow compilation

* Fix compilation

* remove unnecessary local deploy files.

--- a/foundry.toml
+++ b/foundry.toml
@@ -10,13 +10,14 @@ remappings = [
 "eth-gas-reporter/=node_modules/eth-gas-reporter/",
 "forge-std/=lib/forge-std/src/",
 "hardhat/=node_modules/hardhat/",
-"solady/=node_modules/solady/",
-"@openzeppelin/contracts-upgradeable/=/node_modules/@openzeppelin/contracts-upgradeable/",
-"@openzeppelin/contracts/=/node_modules/@openzeppelin/contracts/",
+"solady/=node_modules/solady/src",
+"@openzeppelin/contracts-upgradeable/=node_modules/@openzeppelin/contracts-upgradeable/",
+"@openzeppelin/contracts/=node_modules/@openzeppelin/contracts/",
 ]
 test = 'test'
 cache_path  = 'cache_forge'
-solc_version = '0.8.16'
+solc_version = '0.8.22'
 optimizer_runs = 2000
 fs_permissions = [{ access = "read", path = "node_modules/@arbitrum/"}, { access = "read", path = "node_modules/@openzeppelin/"},{ access = "read-write", path = "./scripts/foundry"}]
 script = 'scripts'
+via-ir = true
