--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,5 @@
 	url = https://github.com/OffchainLabs/arbitrum-sdk
 [submodule "lib/nitro-contracts"]
 	path = lib/nitro-contracts
-	url = https://github.com/EspressoSystems/nitro-contracts
+  url = https://github.com/EspressoSystems/nitro-contracts
+  branch = develop
